static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap');

* {
  margin: 0;
  padding: 0;
  border: none;
}

h1 {
  margin-top: 1rem;
}

body{
    font-family: Lato, sans-serif;
    font-weight: 400;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Header Styling */

.navbar-brand {
  font-family: Roboto, sans-serif;
  font-size: 3rem;
  font-weight: 400;
  color: white;
  text-decoration: none;
}

.navbar-dark .navbar-brand:hover {
  color: #f8b195;
}

.navbar-dark {
  background-color: #355c7d;
  border-bottom: #f8b195 5px solid;
}

.navbar-dark .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28248, 177, 149, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.nav-item {
  justify-content: space-between;
  font-size: 20px;
  margin-left: 6rem;
  display: flex;
}

.navbar-nav {
  text-transform: uppercase;
  font-size: 1.3rem;
  display: flex;
}

.navbar-dark .navbar-nav .nav-link {
  color: white;
  font-weight: 600;
}

.navbar-dark .navbar-nav .nav-link:hover {
  color: #f8b195;
}

/* Nav breakpoints */

@media only screen and (max-width: 769px) {
  .navbar-brand {
    font-size: 2rem;
  }
}

@media only screen and (max-width: 390px) {
  .navbar-brand {
    font-size: 1.5rem;
  }
}

/*Flashed messages*/

.flashed-messsages {
  font-weight: 400;
  color: #C06C84;

}

/* Footer Styling */

footer {
  background-color: #355c7d;
  padding: 30px 0;
  color: white;
  border-top: #f8b195 5px solid;
}

.footer-container {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.company-info h3 {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
}

.company-info p {
  font-size: 16px;
  line-height: 1.5;
}

.contact-info h4 {
  font-size: 18px;
  font-weight: bold;
  margin-bottom: 10px;
}

.contact-info ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.contact-info li {
  font-size: 16px;
  line-height: 1.5;
}

/* Event Styling */


.featured-title{
    padding: 20px;
    text-align: center;
}

.events-by-date {
    
    padding: 20px;
}

.events-list {
    margin-bottom: 10px;
    display: block;
    clear: both; 
    padding: 20px;
    background-color: #355c7d;
    color: white;
    border-radius: 10px;   
}

.events-list a {
  color: white;
}

.events-list a:hover {
  color: #f8b195;
}

.image-events {
    margin-bottom: 0px;
    padding-bottom: 60px;
}

.events-list .four-events p,
.events-list .image-events p {
    margin: 0;
}

.events-date {
    color: #f8b195;
    font-weight: bolder;
}

.featured-events {
    padding: 20px;
    font-size: 1.2rem; 
}

.events-list-featured {
    margin-bottom: 10px;
    display: block;
    clear: both;
    text-align: center;
}

.four-featured {
  background-color: #355c7d;
  color: white;
  border-radius: 10px; 
  padding-top: 20px;
  margin-bottom: 10px;
}

.four-featured .col {
  justify-content: center;
}

.body-container {
  flex-grow: 1;
  padding-top: 20px;
}

/* Sign Up form */

.form-signup {
  width: 100%;
  max-width: 330px;
}

.form-col {
  display: flex;
  justify-content: center;
}

/* bt primary/success color */
.btn-primary {
  background-color: #355c7d;
  border-color: #355c7d;
  color: white;
}

.btn-success {
  background-color: #f8b195;
  border-color: #f8b195;
  color: #355c7d;
  letter-spacing: 2px;
}

.btn-primary:hover, .btn-primary:focus, .btn-success:hover, .btn-success:focus{
  background-color: #C06C84;
  border-color: #C06C84;
  color: white;
}

.btn-fixed-width {
  width: 100%;
  height: 100%;
}

/* inspiration page */

.inspiration-row {
  align-items: center;
  background-color: #355c7d;
  margin: 20px 0;
}

.inspiration-row h2 {
  color: #f8b195;
}

.inspiration-row p {
  color: white;
  font-size: 1.2rem;
  text-align: justify;
}

.inspiration-img {
  margin: 10px;
  border: 5px solid #f8b195;
}

/* home page */

.events-row {
  border: #6c5B7B solid 3px;
  border-radius: 3px;
}

.events-row p {
  color: rgb(32, 32, 32);
}

.events-col a {
  color: #C06C84;
  text-decoration: none;
  font-weight: 400;
}

.events-col a:hover {
  color: #6c5B7B;
}

.carousel-container {
  padding-left: 0;
  padding-right: 0;
}

.card-img {
  width: 100%;
  object-fit: cover;
  background-position: top;
}

.mentor-img {
  max-height: 100px;
  width: auto;
}

/* 404 page styling */

.message {
  width: 50%;
  min-width: 300px;
  margin: auto auto;
  height: auto;
  background-color: #355c7d;
  border: 5px solid #f8b195;
  color: white;
  position: relative;
  bottom: 25%;
  font-size: 1.2rem;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
  text-align: center;
  box-shadow: 10px 10px 20px black;
  z-index: 3;
}

.message h1 {
  font-weight: 900;
}

.message p {
  font-weight: 600;
}

.message a {
  text-decoration: none;
  color: white;
  font-weight: 800;
  font-size: 1.5rem;
}

/* thank you page styling */

.thanks {
  width: 50%;
  min-width: 300px;
  margin: auto auto;
  height: auto;
  background-color: #355c7d;
  border: 5px solid #f8b195;
  color: white;
  position: relative;
  bottom: 25%;
  font-size: 1.2rem;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
  text-align: center;
  box-shadow: 10px 10px 20px black;
}

.thanks-text {
  color: #C06C84;
  font-weight: 400;
}


/* Login page */
.card-header{
  font-size: 2rem;
  justify-content: center;
  display: flex;
  background-color: #355c7d;
  color: white;
}

.signin-form button{
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

/* media queries */

@media screen and (max-width: 576px) {
  .footer-container, .search-container {
    flex-direction: column;
  }
}

@media screen and (max-width: 500px) {
  .image-events img {
    width: 90vw;
  }
}

/* search mentorship program */

.search-container {
  padding: 20px;
  display: flex;
  justify-content: space-around;
  gap: 1rem;
}

.form-button {
  margin-top: 10px;
}

.cards-container {
  margin: 20px 0;
}

.cards-container .card-body, .cards-container li  {
  background-color: #355c7d;
  color: white;
}

.cards-container li {
  border-color: white;
}

.cards-container .card-title {
  letter-spacing: 2px;
}

.cards .col {
  display: flex;
  justify-content: center;
  padding-top: 30px;
}

/* team page */

.social-links {
  color: #f8b195;
  padding: 0 10px;
}

.social-links:hover {
  color: #C06C84
}

.img-team {
  width: 285px;
  height: 285px;
}

